--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -19,11 +19,8 @@ html, body
   border-bottom: 2px solid $graylightcolor
   padding: 10px
   display: block
-
-.messages-search
-  position: relative
-  top: 20px
-  margin-bottom: 20px
+  margin-top: 0
+  margin-bottom: 2.5%
 
 .container .personal-card
   background-color: $whitecolor
