--- a/skyfolk/static/sass/search_advanced.sass
+++ b/skyfolk/static/sass/search_advanced.sass
@@ -1,4 +1,4 @@
-$boxshadow: 0 1px 5px rgba(0, 0, 0, 0.15)
+$boxshadow: 0 1px 5px rgba(0, 0, 0, .15)
 $greycolor: #f9f9f9
 $padding: 10px
 $greydarkcolor: #bdbdbd
