--- a/skyfolk/static/sass/notifications.sass
+++ b/skyfolk/static/sass/notifications.sass
@@ -13,6 +13,7 @@ html
   -webkit-font-smoothing: antialiased
 
 .container .all-notifications-options
+  margin-top: 3.5%
   text-align: center
 
 .notifications
