--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -95,12 +95,6 @@
   </div>
 </div>
 <!-- IGNORAR, SOLO MUESTRA OBJETOS AL HACER SCROLL -->
-    <script async>
-
-      window.sr = new scrollReveal(config);
-
-    </script>
-
      <script async>
       var config = {
         easing: 'hustle',
@@ -177,7 +171,7 @@ Para el manejo de las pestañas del usuario
   });
 </script>
 <!-- Busqueda en tab-amigos -->
-<script async>
+<script>
   var options = {
     valueNames: [ 'name' ],
     indexAsync : true
