--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -36,7 +36,7 @@
     <script src="{{STATIC_URL}}js/jquery.min.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery-ui.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/core.js" type="text/javascript"></script>
-    <script async src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
     <!-- <script async src="{{STATIC_URL}}js/jquery.textcomplete.js"></script> -->
     <!-- Mentions -->
     <!--
