--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -34,7 +34,7 @@
     </ul>
     </nav>
     <script src="{{STATIC_URL}}js/jquery.min.js" type="text/javascript"></script>
-    <script async src="{{STATIC_URL}}js/jquery-ui.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery-ui.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/core.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
     <!-- <script async src="{{STATIC_URL}}js/jquery.textcomplete.js"></script> -->
