--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -33,8 +33,9 @@
         <li id="loader"></li>
     </ul>
     </nav>
-    <script src="{{STATIC_URL}}js/jquery.min.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/jquery-ui.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery-3.1.0.min.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery-ui.min.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/core.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
     <!-- <script async src="{{STATIC_URL}}js/jquery.textcomplete.js"></script> -->
