--- a/skyfolk/templates/account/base.html
+++ b/skyfolk/templates/account/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/setup.css" />
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.10.2.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
     <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
   </head>
