--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -38,6 +38,8 @@
     <script src="{{STATIC_URL}}js/jquery-ui.min.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/core.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery.textcomplete.min.js" type="text/javascript"></script>
+
     <!-- <script async src="{{STATIC_URL}}js/jquery.textcomplete.js"></script> -->
     <!-- Mentions -->
     <!--
@@ -47,5 +49,6 @@
 <!-- Sweet Alert -->
 
     <link rel="stylesheet" href="{{STATIC_URL}}dist/sweetalert.css" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" href="{{STATIC_URL}}emoji/css/textarea_find_emoji.css" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="{{STATIC_URL}}themes/google/google.css" onload="if(media!='all')media='all'">
     <script async src="{{STATIC_URL}}dist/sweetalert.min.js" type="text/javascript"></script>
