--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -156,5 +156,6 @@
       </table>
   </div>
 {% endif %}
+  <script src="{{STATIC_URL}}emoji/js/textarea_find_emoji.js" type="text/javascript"></script>
   </body>
 </html>
