--- a/skyfolk/templates/account/photo_gallery.html
+++ b/skyfolk/templates/account/photo_gallery.html
@@ -14,7 +14,7 @@
                 {% for photo in object_list %}
                     <div class="col-lg-2 col-md-12 col-sm-12 container-image">
                         <div class="col-lg-12 principal-content">
-                            <img src="{{ photo.image.url }}" alt="{{ photo.title }}" title="{{ photo.title }}">
+                            <img src="{{ photo.photo.image.url }}" alt="{{ photo.photo.title }}" title="{{ photo.photo.title }}">
                         </div>
                         <div class="col-lg-12 legend-content">
                             <div class="legend-user-image">
@@ -22,8 +22,8 @@
                             </div>
                             <div class="col-lg-8 col-md-8 col-sm-8 legend-user-data">
                                 <a href="/profile/{{ photo.owner.username }}">@{{ photo.owner.username }}</a>
-                                <i class="photo-title">{{ photo.title }}</i>
-                                <i class="fa-clock-o" aria-hidden="true"> {{ photo.date_added|naturaltime }}</i>
+                                <i class="photo-title">{{ photo.photo.title }}</i>
+                                <i class="fa-clock-o" aria-hidden="true"> {{ photo.photo.date_added|naturaltime }}</i>
                             </div>
                         </div>
                     </div>
