--- a/skyfolk/static/sass/gallery.sass
+++ b/skyfolk/static/sass/gallery.sass
@@ -3,12 +3,12 @@ $whitecolor: #ffffff
 $boxshadow: 0 1px 5px rgba(0, 0, 0, 0.15)
 $blueskyfolk: #1e88e5
 $graycolor: #555
+$eocolor: #e0e0e0
 
 html, body
   color: #555 !important
   font-family: "Open Sans",sans-serif !important
   font-size: 11.5px !important
-  overflow: hidden
 
 @media only screen and (min-width: 1220px)
   .container-gallery > .container-image
@@ -36,6 +36,7 @@ html, body
       width: 100%
       height: 100%
       border-radius: 3px
+      border-bottom: 2px solid #1e88e5
   & .legend-content
     height: 15%
     padding: 10px
