--- a/skyfolk/templates/account/photo_gallery.html
+++ b/skyfolk/templates/account/photo_gallery.html
@@ -1,7 +1,8 @@
 {% extends 'account/base_interface.html' %}
 {% load avatar_tags %}
-{% block title %} <title>Galería de {{ user_gallery }}</title> {% endblock %}
+{% load i18n %}
 {% load humanize %}
+{% block title %} <title>Galería de {{ user_gallery }}</title> {% endblock %}
 
 {% block include_files %}
     <link rel="stylesheet" href="{{STATIC_URL}}css/gallery.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
@@ -14,7 +15,7 @@
                 {% for photo in object_list %}
                     <div class="col-lg-2 col-md-12 col-sm-12 container-image">
                         <div class="col-lg-12 principal-content">
-                            <img src="{{ photo.photo.image.url }}" alt="{{ photo.photo.title }}" title="{{ photo.photo.title }}">
+                            <img src="{{ photo.photo.image.url }}" alt="{{ photo.photo.title }}" title="{{ photo.photo.title }}" onclick="location.href='{{ photo.photo.get_absolute_url }}'">
                         </div>
                         <div class="col-lg-12 legend-content">
                             <div class="legend-user-image">
@@ -30,6 +31,5 @@
                 {% endfor %}
             {% endif %}
         </div> <!-- end container-gallery -->
-    {{ form.as_p }}
 </div> <!-- end wrapper -->
 {% endblock %}
