--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -527,43 +527,43 @@ a.fontawesome-cog:hover {
   transform: translateZ(0); }
 
 /* OPCIONES COMENTARIOS */
-.optiones_comentarios {
+.options_comentarios {
   position: relative;
   display: block;
   width: 90%;
   height: auto; }
-.optiones_comentarios ul li {
+.options_comentarios ul li {
   list-style-type: none;
   display: inline-block;
   font-size: 1.2em;
   float: right;
   cursor: pointer;
 }
-.optiones_comentarios ul .like-comment, .quote-comment, .reply-comment, .add-timeline { margin-left: 5%; }
-.optiones_comentarios ul .fa-stack, .trash-comment {margin-left: 2.5%; }
+.options_comentarios ul .like-comment, .quote-comment, .reply-comment, .add-timeline { margin-left: 5%; }
+.options_comentarios ul .fa-stack, .trash-comment {margin-left: 2.5%; }
 .hate-with-values {margin-right: 2.5% !important;}
-.optiones_comentarios ul li:hover {
+.options_comentarios ul li:hover {
   transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
   -webkit-transition: all 0.1s ease-in-out; }
 
-.optiones_comentarios ul .like-comment:hover{
+.options_comentarios ul .like-comment:hover{
   color: #f06292; }
-.optiones_comentarios ul .fa-quote-left:hover {
+.options_comentarios ul .fa-quote-left:hover {
   color: grey; }
-.optiones_comentarios ul .fa-reply:hover {
+.options_comentarios ul .fa-reply:hover {
   color: #1e88e5; }
-.optiones_comentarios ul .fa-tag:hover {
+.options_comentarios ul .fa-tag:hover {
   color: #bbdefb; }
-.optiones_comentarios ul .fa-trash:hover {
+.options_comentarios ul .fa-trash:hover {
   color: #f44336; }
-.optiones_comentarios ul .fa-bolt {
+.options_comentarios ul .fa-bolt {
     top:-5%;
     left:2%;
     font-size:80%; }
-.optiones_comentarios ul .hate-comment:hover {
+.options_comentarios ul .hate-comment:hover {
     color: #3f51b5;  }
-.optiones_comentarios ul .fa-stack .hate-value {
+.options_comentarios ul .fa-stack .hate-value {
     position: relative;
     float: right;
     left: 4px;
