--- a/skyfolk/static/css/gallery.css
+++ b/skyfolk/static/css/gallery.css
@@ -1,61 +1,2 @@
-html, body {
-  color: #555 !important;
-  font-family: "Open Sans", sans-serif !important;
-  font-size: 11.5px !important; }
-
-@media only screen and (min-width: 1220px) {
-  .container-gallery > .container-image {
-    margin-left: 2.81%; } }
-.wrapper {
-  padding: 10px;
-  margin-top: 1.3%; }
-
-.container-gallery {
-  margin-top: 2.7%; }
-
-.container-image {
-  background-color: #ffffff;
-  height: 400px;
-  padding: 10px;
-  border-radius: 3px;
-  margin-bottom: 2.5%;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
-  .container-image .principal-content {
-    display: block;
-    height: 85%;
-    width: 100%; }
-    .container-image .principal-content img {
-      width: 100%;
-      height: 100%;
-      border-radius: 3px;
-      border-bottom: 2px solid #1e88e5; }
-  .container-image .legend-content {
-    height: 15%;
-    padding: 10px; }
-    .container-image .legend-content .legend-user-image {
-      width: 20%;
-      height: 50px;
-      display: inline-block;
-      float: left;
-      margin-right: 2%; }
-      .container-image .legend-content .legend-user-image img {
-        width: 100%;
-        height: 100%;
-        border-radius: 3px;
-        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
-    .container-image .legend-content .legend-user-data a {
-      text-decoration: none;
-      color: #1e88e5;
-      font-weight: 600;
-      display: block; }
-    .container-image .legend-content .legend-user-data .photo-title {
-      font-weight: 600;
-      margin-top: 10px;
-      display: block; }
-    .container-image .legend-content .legend-user-data .fa-clock-o {
-      clear: both;
-      display: block;
-      margin-top: 1.5%;
-      color: #555; }
-
+html,body{color:#555 !important;font-family:"Open Sans",sans-serif !important;font-size:11.5px !important}@media only screen and (min-width: 1220px){.container-gallery>.container-image{margin-left:2.81%}}.wrapper{padding:10px;margin-top:1.3%}.container-gallery{margin-top:2.7%}.container-image{background-color:#fff;height:400px;padding:10px;border-radius:3px;margin-bottom:2.5%;box-shadow:0 1px 5px rgba(0,0,0,0.15)}.container-image .principal-content{display:block;height:85%;width:100%}.container-image .principal-content img{width:100%;height:100%;border-radius:3px;border-bottom:2px solid #1e88e5}.container-image .principal-content .tags-content{position:absolute;padding:10px;height:50px}.container-image .principal-content .tags-content blockquote{display:inline-block;color:#1e88e5;border-radius:3px;background-color:rgba(255,255,255,0.15);transition:all 0.1s ease-in-out;padding:10px}.container-image .principal-content .tags-content blockquote:hover{background-color:#fff}.container-image .legend-content{height:15%;padding:10px}.container-image .legend-content .legend-user-image{width:20%;height:50px;display:inline-block;float:left;margin-right:2%}.container-image .legend-content .legend-user-image img{width:100%;height:100%;border-radius:3px;box-shadow:0 1px 5px rgba(0,0,0,0.15)}.container-image .legend-content .legend-user-data a{text-decoration:none;color:#1e88e5;font-weight:600;display:block}.container-image .legend-content .legend-user-data .photo-title{font-weight:600;margin-top:10px;display:block}.container-image .legend-content .legend-user-data .photo-date{clear:both;display:block;margin-top:1.5%;color:#555}.container-image .legend-content .legend-user-data blockquote{display:inline-block;padding:10px}
 /*# sourceMappingURL=gallery.css.map */
