--- a/skyfolk/static/sass/gallery.sass
+++ b/skyfolk/static/sass/gallery.sass
@@ -37,6 +37,19 @@ html, body
       height: 100%
       border-radius: 3px
       border-bottom: 2px solid #1e88e5
+    & .tags-content
+      position: absolute
+      padding: 10px
+      height: 50px
+      & blockquote
+        display: inline-block
+        color: $blueskyfolk
+        border-radius: 3px
+        background-color: rgba(255, 255, 255, 0.15)
+        transition: all .1s ease-in-out
+        padding: 10px
+        &:hover
+          background-color: rgba(255, 255, 255, 1)
   & .legend-content
     height: 15%
     padding: 10px
@@ -61,8 +74,11 @@ html, body
         font-weight: 600
         margin-top: 10px
         display: block
-      & .fa-clock-o
+      & .photo-date
         clear: both
         display: block
         margin-top: 1.5%
         color: $graycolor
+      & blockquote
+        display: inline-block
+        padding: 10px
