--- a/skyfolk/templates/account/photo_gallery.html
+++ b/skyfolk/templates/account/photo_gallery.html
@@ -15,6 +15,11 @@
                 {% for photo in object_list %}
                     <div class="col-lg-2 col-md-12 col-sm-12 container-image">
                         <div class="col-lg-12 principal-content">
+                                            <div class="tags-content">
+                            {% for tag in photo.tags.all %}
+                                <blockquote>{{ tag.name }}</blockquote>
+                            {% endfor %}
+                            </div>
                             <img src="{{ photo.photo.image.url }}" alt="{{ photo.photo.title }}" title="{{ photo.photo.title }}" onclick="location.href='{{ photo.photo.get_absolute_url }}'">
                         </div>
                         <div class="col-lg-12 legend-content">
@@ -24,21 +29,20 @@
                             <div class="col-lg-8 col-md-8 col-sm-8 legend-user-data">
                                 <a href="/profile/{{ photo.owner.username }}">@{{ photo.owner.username }}</a>
                                 <i class="photo-title">{{ photo.photo.title }}</i>
-                                <i class="fa-clock-o" aria-hidden="true"> {{ photo.photo.date_added|naturaltime }}</i>
+                                <i class="photo-date"><i class="fa fa-clock-o" aria-hidden="true"></i> {{ photo.photo.date_added|naturaltime }}</i>
                             </div>
                         </div>
                     </div>
                 {% endfor %}
             {% endif %}
         </div> <!-- end container-gallery -->
-    {% comment %}
         <form id="upload_new_photo" action="" method="post">{% csrf_token %}
-            {{ uploadForm.csrftoken }}
-            {{ uploadForm }}
+            {% for form in uploadSetForm %}
+                {{ form.id }}
+            {% endfor %}
             <button type="submit" id="upload_photo"><i class="fa fa-paper-plane"> </i> Enviar</button>
             <button type="button" id="close"><i class="fa fa-remove"> </i> Cerrar</button>
         </form>
-     {% endcomment %}
 </div> <!-- end wrapper -->
     <script async src="{{STATIC_URL}}js/photo_gallery.js" type="text/javascript"></script>
 {% endblock %}
