--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -155,16 +155,14 @@
               {% endif %}
           </header>
           <ul id="user-stats" class="stats">
-            <li data-href="/followers/{{ user_profile.username }}">
-                <a><strong id="followers-stats">{{ followers }}</strong><span>Seguidores</span></a>
+            <li>
+                <a href="/followers/{{ user_profile.username }}"><strong id="followers-stats">{{ followers }}</strong><span>Seguidores</span></a>
             </li>
             <li>
                 <a id="likes"><strong>{{n_likes}}</strong><span title="me gusta" onclick="contador()">Me gusta</span></a>
             </li>
             <li>
                 <a class="to_gallery" href="/media/{{ user_profile.username }}/"><strong>{{ multimedia_count }}</strong><span>Fotos y vídeos</span></a>
-            <li data-href="/gallery/{{ user_profile.username }}">
-                <a class="to_gallery"><strong>48</strong><span>Fotos</span></a>
             </li>
           </ul>
         </div>
