--- a/skyfolk/static/sass/gallery.sass
+++ b/skyfolk/static/sass/gallery.sass
@@ -32,6 +32,7 @@ html, body
     display: block
     height: 85%
     width: 100%
+    position: relative
     & img
       width: 100%
       height: 100%
@@ -41,6 +42,8 @@ html, body
       position: absolute
       padding: 10px
       height: 50px
+      width: 100%
+      text-align: center
       & blockquote
         display: inline-block
         color: $blueskyfolk
@@ -48,6 +51,7 @@ html, body
         background-color: rgba(255, 255, 255, 0.15)
         transition: all .1s ease-in-out
         padding: 10px
+        margin-top: 2%
         &:hover
           background-color: rgba(255, 255, 255, 1)
   & .legend-content
