--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -3,7 +3,7 @@
 {% load photologue_tags i18n %}
 {% load i18n %}
 {% load humanize %}
-{% block title %} <title>Galería de {{ user_gallery }}</title> {% endblock %}
+{% block title %} <title>{{ object.title }} por: {{ object.owner }}</title> {% endblock %}
 
 {% block include_files %}
     <link rel="stylesheet" href="{{STATIC_URL}}css/gallery.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
