--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -15,7 +15,7 @@
                 {% for photo in object_list %}
                     <div class="col-lg-2 col-md-12 col-sm-12 container-image">
                         <div class="col-lg-12 principal-content">
-                                            <div class="tags-content">
+                            <div class="tags-content">
                             {% for tag in photo.tags.all %}
                                 <blockquote>{{ tag.name }}</blockquote>
                             {% endfor %}
@@ -28,7 +28,7 @@
                             </div>
                             <div class="col-lg-8 col-md-8 col-sm-8 legend-user-data">
                                 <a href="/profile/{{ photo.owner.username }}">@{{ photo.owner.username }}</a>
-                                <i class="photo-title">{{ photo.photo.title }}</i>
+                                <i class="photo-title">{{ photo.title }}</i>
                                 <i class="photo-date"><i class="fa fa-clock-o" aria-hidden="true"></i> {{ photo.date_added|naturaltime }}</i>
                             </div>
                         </div>
