--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -7,37 +7,48 @@
 
 {% block include_files %}
     <link rel="stylesheet" href="{{STATIC_URL}}css/gallery.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/photo_detail.css" onload="if(media!='all')media='all'"> <!-- Estilos para el contenedor de la imagen -->
 {% endblock %}
 
 {% block content %}
 <div class="wrapper">
-    <div class="col-lg-12 col-md-12 col-sm-12 container-gallery">
-        <div class="row col-lg-12">
-            <h1 class="page-header">{{ object.title }}</h1>
-            <p class="muted"><small>{% trans "Published" %} {{ object.date_added|naturaltime }}</small></p>
-        </div>
-    <div class="row">
-        <div class="col-md-6">
-		    {% if object.caption %}<p>{{ object.caption|safe }}</p>{% endif %}
-		    <a href="{{ object.image.url }}">
-		        <img src="{{ object.get_display_url }}" class="thumbnail" alt="{{ object.title }}">
-		    </a>
-        </div>
-        <div class="col-md-6">
-            {% if object.public_galleries %}
-                <p>{% trans "This photo is found in the following galleries" %}:</p>
-                <table>
-                    {% for gallery in object.public_galleries %}
-                        <tr>
-                            <td>{% previous_in_gallery object gallery %}</td>
-	                        <td class="text-center"><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></td>
-	                        <td>{% next_in_gallery object gallery %}</td>
-                        </tr>
-					{% endfor %}
-				</table>
-			{% endif %}
-        </div>
-    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 container-photo">
+	    <div class="col-lg-10 col-md-12 col-sm-12 photo">
+                <div class="col-lg-9 col-md-12 col-sm-12 photo-body">
+                 <a href="{{ object.image.url }}">
+                     <img src="{{ object.image.url }}" class="thumbnail" alt="{{ object.title }}">
+                 </a>
+                    <div class="col-lg-12 photo-details">
+                            <div class="legend-user-image">
+                                {% avatar object.owner.username %}
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-sm-8 legend-user-data">
+                                <a href="/profile/{{ object.owner.username }}">@{{ object.owner.username }}</a>
+                                <i class="photo-title">{{ object.title }}{% if object.caption %}<p>{{ object.caption|safe }} </p>{% endif %}</i>
+                                <i class="photo-date"><i class="fa fa-clock-o" aria-hidden="true"></i> {% trans "Published" %} {{ object.date_added|naturaltime }}</i>
+                            </div>
+                            <div class="col-lg-12 col-md-12 col-sm-12 tags-content">
+                                {% for tag in photo.tags.all %}
+                                        <blockquote>{{ tag.name }}</blockquote>
+                                {% endfor %}
+                            </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                  {% if object.public_galleries %}
+                        <p>{% trans "This photo is found in the following galleries" %}:</p>
+                        <table>
+                            {% for gallery in object.public_galleries %}
+                                <tr>
+                                    <td>{% previous_in_gallery object gallery %}</td>
+                                    <td class="text-center"><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></td>
+                                    <td>{% next_in_gallery object gallery %}</td>
+                                </tr>
+                    {% endfor %}
+                </table>
+            {% endif %}
+                </div>
+	    </div>
 </div>
 </div>
 {% endblock %}
