--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -36,6 +36,7 @@
                 {% endfor %}
             {% endif %}
         </div> <!-- end container-gallery -->
+    <a href="/upload/photo">Subir foto</a>
 </div> <!-- end wrapper -->
     <script async src="{{STATIC_URL}}js/photo_gallery.js" type="text/javascript"></script>
 {% endblock %}
