--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -11,10 +11,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="wrapper">
+<div class="container">
     <div class="col-lg-12 col-md-12 col-sm-12 container-photo">
-	    <div class="col-lg-10 col-md-12 col-sm-12 photo">
-                <div class="col-lg-9 col-md-12 col-sm-12 photo-body">
+        <div class="photo">
+                <div class="col-lg-8 col-md-12 col-sm-12 photo-body">
                  <a href="{{ object.image.url }}">
                      <img src="{{ object.image.url }}" class="thumbnail" alt="{{ object.title }}">
                  </a>
@@ -34,7 +34,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="gallery-details">
                   {% if object.public_galleries %}
                         <p>{% trans "This photo is found in the following galleries" %}:</p>
                         <table>
@@ -48,7 +48,10 @@
                 </table>
             {% endif %}
                 </div>
-	    </div>
-</div>
+        <div class="col-lg-4 col-md-12 col-sm-12 photo-messages">
+            <h1>Comentarios</h1>
+        </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
