--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -11,6 +11,7 @@
 {% block content %}
     <div class="wrapper">
         <div class="col-lg-12 col-md-12 col-sm-12 container-gallery">
+        <button class="btn-upload-photo" title="¡Subir una foto!"><i class="fa fa-camera-retro" aria-hidden="true"></i></button>
             {% if object_list %}
                 {% for photo in object_list %}
                     <div class="col-lg-2 col-md-12 col-sm-12 container-image">
