--- a/skyfolk/static/css/gallery.css
+++ b/skyfolk/static/css/gallery.css
@@ -11,7 +11,23 @@ html, body {
   margin-top: 1.3%; }
 
 .container-gallery {
-  margin-top: 2.7%; }
+  margin-top: 1.7%; }
+  .container-gallery .btn-upload-photo {
+    display: block;
+    border: none;
+    background-color: rgba(30, 136, 229, 0.4);
+    color: #ecf0f1;
+    margin: 0 auto 1% auto;
+    border-radius: 100%;
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+    font-size: 1.5em;
+    transition: all 0.1s ease-in-out;
+    outline: none;
+    cursor: pointer; }
+    .container-gallery .btn-upload-photo:hover {
+      background-color: #1e88e5; }
 
 .container-image {
   background-color: #ffffff;
