--- a/skyfolk/static/css/photo_detail.css
+++ b/skyfolk/static/css/photo_detail.css
@@ -1,11 +1,9 @@
 .container-photo {
-  padding: 10px;
   position: relative;
   display: block;
   text-align: center;
   margin-top: 2.7%; }
   .container-photo .photo {
-    padding: 10px;
     color: #555; }
     .container-photo .photo .photo-body {
       box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
@@ -24,7 +22,7 @@
           display: inline-block;
           color: #1e88e5;
           border-radius: 3px;
-          background-color: rgba(255, 255, 255, 0.15);
+          background-color: rgba(0, 0, 0, 0.15);
           transition: all 0.1s ease-in-out;
           padding: 10px;
           margin-top: 2%; }
@@ -60,5 +58,14 @@
     .container-photo .photo img {
       max-width: 100%;
       max-height: 100%; }
+
+.photo-messages {
+  position: relative;
+  height: 870px;
+  overflow: auto;
+  background: white;
+  border-radius: 0.3rem;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  margin-bottom: 1em; }
 
 /*# sourceMappingURL=photo_detail.css.map */
