--- a/skyfolk/static/sass/photo_detail.sass
+++ b/skyfolk/static/sass/photo_detail.sass
@@ -5,14 +5,11 @@ $boxshadow: 0 1px 5px rgba(0, 0, 0, .15)
 $blueskyfolk: #1e88e5
 
 .container-photo
-  padding: 10px
   position: relative
   display: block
   text-align: center
   margin-top: 2.7%
-
   & .photo
-    padding: 10px
     color: $basecolor
     & .photo-body
       box-shadow: $boxshadow
@@ -31,7 +28,7 @@ $blueskyfolk: #1e88e5
           display: inline-block
           color: $blueskyfolk
           border-radius: 3px
-          background-color: rgba(255, 255, 255, 0.15)
+          background-color: rgba(0, 0, 0, 0.15)
           transition: all .1s ease-in-out
           padding: 10px
           margin-top: 2%
@@ -67,3 +64,12 @@ $blueskyfolk: #1e88e5
     & img
       max-width: 100%
       max-height: 100%
+
+.photo-messages
+  position: relative
+  height: 870px
+  overflow: auto
+  background: white
+  border-radius: 0.3rem
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2)
+  margin-bottom: 1em
