--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -37,7 +37,10 @@
                 {% endfor %}
             {% endif %}
         </div> <!-- end container-gallery -->
-    <a href="/upload/photo">Subir foto</a>
+    <form action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">{% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" name="submit" value="Submit">
+    </form>
 </div> <!-- end wrapper -->
     <script async src="{{STATIC_URL}}js/photo_gallery.js" type="text/javascript"></script>
 {% endblock %}
