--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -11,7 +11,7 @@
 {% block content %}
     <div class="wrapper">
         <div class="col-lg-12 col-md-12 col-sm-12 container-gallery">
-        <button class="btn-upload-photo" title="¡Subir una foto!"><i class="fa fa-camera-retro" aria-hidden="true"></i></button>
+        <button class="btn-upload-photo" title="¡Subir una foto!" id="btn-upload-photo"><i class="fa fa-camera-retro" aria-hidden="true"></i></button>
             {% if object_list %}
                 {% for photo in object_list %}
                     <div class="col-lg-2 col-md-12 col-sm-12 container-image">
@@ -37,10 +37,12 @@
                 {% endfor %}
             {% endif %}
         </div> <!-- end container-gallery -->
-    <form action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">{% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="submit" value="Submit">
-    </form>
+    <div class="upload_form" id="upload_photo">
+        <form action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">{% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" name="submit" value="Submit">
+        </form>
+    </div>
 </div> <!-- end wrapper -->
     <script async src="{{STATIC_URL}}js/photo_gallery.js" type="text/javascript"></script>
 {% endblock %}
