--- a/skyfolk/static/css/gallery.css
+++ b/skyfolk/static/css/gallery.css
@@ -9,6 +9,37 @@ html, body {
 .wrapper {
   padding: 10px;
   margin-top: 1.3%; }
+  .wrapper .upload_form {
+    width: 55%;
+    background: #fff;
+    padding: 1em;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+    overflow: hidden;
+    position: fixed;
+    margin: -100px auto 0 auto;
+    top: 50%;
+    right: 0;
+    left: 0;
+    z-index: 9999;
+    display: none; }
+    .wrapper .upload_form input[type="submit"] {
+      border: medium none;
+      border-radius: 2px;
+      display: inline-block;
+      height: 36px;
+      line-height: 36px;
+      padding: 0 2rem;
+      text-transform: uppercase;
+      vertical-align: middle;
+      text-decoration: none;
+      color: #1e88e5;
+      background-color: transparent;
+      text-align: center;
+      letter-spacing: 0.5px;
+      transition: all 0.2s ease-out 0s;
+      cursor: pointer;
+      float: right;
+      outline: none; }
 
 .container-gallery {
   margin-top: 1.7%; }
