--- a/skyfolk/templates/account/pin-left-top.html
+++ b/skyfolk/templates/account/pin-left-top.html
@@ -1,7 +1,7 @@
 {% comment %}
   Pin izquierda arriba
 {% endcomment %}
-<div class="col-lg-6 col-md-12 col-sm-12">
+<div class="col l6 m12 s12">
         <div class="stock card">
             <nav class="ventana-pin">
               <a><i class="fa fa-times"></i></a>
