--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-    margin-top: 3em !important;
+  margin-top: 1.3em !important;
 }
 /*caja de busqueda*/
 .field > form input[type=text],
@@ -17,10 +17,8 @@
 
 .field > form input[type=text] {
   float: right;
-  right: 200px;
   position:relative;
   width: 300px;
-  opacity: 0.6;
   border: none;
   height: 25px;
   top: 7px;
@@ -37,7 +35,7 @@
   background: #f0f0f0 url('/static/img/search-icon.png') no-repeat 95%;
   background-size: 13px;
   padding: 0 20px;
-  color: black;
+  color: black !important;
 }
 .field > form input[type=text]:focus {
     background: #cccccc 1%;
@@ -86,11 +84,8 @@
 
 .fa-bars {
   color: rgba(44, 44, 44, 0.854);
-  float: left;
   display: inline-block;
   position: relative;
-  right: 0;
-  top: 14px;
   list-style-type: none;
   margin-left: 50px;
   cursor: pointer;
@@ -117,7 +112,7 @@
   opacity: 0.8; }
 
 .fa-bars-rotate {
-  color: #1976d2 !important; }
+  background-color: rgba(0,0,0,0.1); }
 
 .fa-bars-rotate-2 {
   color: tomato; }
@@ -138,8 +133,8 @@
   display: none;
   background-color: #fff;
   width: 250px;
-  position: absolute;
-  top: 40px;
+  position: fixed;
+  top: 48px;
   margin-right: 200px;
   font-family: "Open Sans", sans-serif;
   font-weight: 100;
@@ -209,55 +204,6 @@
   top: 0;
   z-index: 9999; }
 
-/* Menu opcional para usuario */
-.box-tool .oldMenu {
-  position: relative;
-  height: 30px;
-  width: 40%;
-  display: inline-block;
-  margin-left: 30px;
-  font-weight: 100; }
-
-.box-tool .oldMenu li {
-  display: inline-block;
-  background-color: #fff;
-  height: 100%;
-  text-align: center;
-  margin-left: 5px;
-  margin-top: 10px;
-  padding: 0 10px;
-  color: #424242;
-  font-size: 1.4em;
-  font-weight: 100;
-  font-family: "Open Sans", sans-serif !important;
-  -webkit-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  cursor: pointer; }
-
-.box-tool .oldMenu li:hover {
-  color: #1e88e5;
-  border-bottom: 3px solid #1e88e5; }
-
-@media only screen and (max-width: 1200px) {
-  .box-tool .oldMenu {
-    width: 40.9%; }
-
-  .box-tool .oldMenu li {
-    font-size: 1.2em;
-    margin-left: -2px; }
-
-  .box-tool .logotipo_skyfolk {
-    display: none; } }
-@media only screen and (max-width: 1005px) {
-  .box-tool .oldMenu {
-    display: none; } }
-@media only screen and (min-width: 1200px) and (max-width: 1250px) {
-  .box-tool .oldMenu li {
-    margin-left: 1px; } }
-.box-tool .oldMenu li:hover:after {
-  height: 3px;
-  background-color: #1e88e5; }
 
 .logotipo_skyfolk {
   position: fixed;
@@ -265,12 +211,12 @@
   margin: auto;
   left: 50%;
   cursor: pointer;
-  top: 10px;
+  color: #555 !important;
   font-size: 1.7em;
   letter-spacing: 0.2px; }
 
-.logotipo_skyfolk i {
-  color: #0096d7;
+.logotipo_skyfolk span {
+  color: #1e88e5;
   text-shadow: 1px 1px 1px #ccc; }
 
 .fa-bars .fa-bars-content li:nth-child(1) {
