--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -2,6 +2,7 @@
   Base para el head de la pagina (menu horizontal con busqueda etc...)
 {% endcomment %}
 {% load notifications_tags %}
+{% comment %}
 <nav class="box-tool">
     <ul class="box-tool-wrapper">
       <li>
@@ -33,6 +34,25 @@
         <li id="loader"></li>
     </ul>
     </nav>
+    {% endcomment %}
+<div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper white z-depth-1">
+          <a href="/profile/{{ request.user }}/" class="brand-logo center logotipo_skyfolk"><span>S</span>kyfolk</a>
+          <a data-activates="mobile-menu" class="btn-flat left button-menu-left blue-text text-darken-1"><i class="material-icons">menu</i></a>
+          <ul class="left hide-on-med-and-down">
+                <li><a href="/inicio" class="blue-text text-darken-1"> <i class="material-icons">home</i></a></li>
+                <li id="publish2"><a class="blue-text text-darken-1"><i class="material-icons">message</i></a></li>
+                <li><a href="/following/{{ request.user.username }}" class="blue-text text-darken-1"><i class="material-icons">people</i></a></li>
+                <li id="agregar-amigo"> <a class="blue-text text-darken-1"><i class="material-icons">add</i></a></li>
+                <li><a href="{% url 'account_logout' %}" class="blue-text text-darken-1"><i class="material-icons">exit_to_app</i></a></li>
+          </ul>
+          <a data-activates="mobile-menu" id="notifications-menu" class="right waves-effect btn-flat"><i class="material-icons">notifications</i></a>
+      </div>
+    </nav>
+    {% include "account/menu-vertical.html" %}
+    {% include "account/notification-right-menu.html" %}
+  </div>
     <script src="{{STATIC_URL}}js/jquery-3.1.0.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery-ui.min.js" type="text/javascript"></script>
@@ -40,6 +60,7 @@
     <script async src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery.textcomplete.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/materialize.min.js" type="text/javascript"></script>
     <!-- <script async src="{{STATIC_URL}}js/jquery.textcomplete.js"></script> -->
     <!-- Mentions -->
     <!--
