--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -10,9 +10,13 @@
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/core.css" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css" onload="if(media!='all')media='all'">
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/buscar.css" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
     <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
     {% block extra-js %}{% endblock %}
     <!-- bloques de estilos para cada pagina -->
