--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -3,7 +3,8 @@
 {% endcomment %}
 {% load app_filters %}
 {% load avatar_tags %}
-<div class="col-lg-12 col-md-12 col-sm-12">
+<div class="row">
+<div class="col l12 m12 s12">
         <div class="user-card card">
           <nav class="ventana-pin">
             <a><i class="fa fa-times"></i></a>
@@ -60,8 +61,8 @@
             </div>
           </div>
           <!-- INFORMACION ADICIONAL DEL USUARIO -->
-        <div class="col-sm-12 col-md-12 col-lg-12"></div> <!-- separate div -->
-                  <div class="col-sm-10 col-md-10 col-lg-3 info-paw" id="personal-card-info">
+        <div class="col s12"></div> <!-- separate div -->
+                  <div class="col s10 m10 l3 info-paw" id="personal-card-info">
                     <div class="info-nav">
                       <div class="info-wrapper-pic">
                           <div class="info-user-pic">{% avatar user_profile 90 %}</div>
@@ -86,13 +87,13 @@
                     </div>
                 </div>
                 <!-- Trofeos -->
-                  <div class="col-sm-12 col-md-12 col-lg-10 trofeos">
+                  <div class="col s12 m12 l10 trofeos">
                      <span id="close-trofeos" class="fa fa-close fa-2x"></span>
                       <h3 class="trofeos-title">Logros de {{ user_profile.username }}</h3>
-                      <div class="col-lg-12 col-md-12 col-sm-12 wrapper-trofeos">
-                          <div class="col-sm-3 col-md-3 col-lg-1 trofeo-user">
+                      <div class="col l12 m12 s12 wrapper-trofeos">
+                          <div class="col s3 m3 l1 trofeo-user">
                           </div>
-                          <div class="col-sm-3 col-md-3 col-lg-1 trofeo-user">
+                          <div class="col s3 m3 l1 trofeo-user">
                           </div>
                           <div class="col-sm-3 col-md-3 col-lg-1 trofeo-user">
                           </div>
@@ -166,4 +167,5 @@
             </li>
           </ul>
         </div>
+</div>
 </div>
