--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -34,7 +34,8 @@
 
 <div class="container">
     {% if user_profile.is_active %}
-  <div class="col-lg-8 col-md-6 col-sm-12">
+        <div class="row">
+  <div class="col l8 m6 s12">
 <!-- Contenedor principal, engloba el tablon, widgets... [IMPORTANTE]-->
     <div class="container">
     <!-- Para el diseño de la rama develop, se cambia col-md-6 por col-md-12 -->
@@ -58,9 +59,9 @@
 
   </div>
 
-  <div class="col-lg-4 col-md-6 col-sm-12">
+  <div class="col l4 m6 s12">
     <div class="container">
-      <div class="col-lg-12">
+      <div class="col l12 m12 s12">
          <nav class="ventana-pin">
            <a><i class="fa fa-times"></i></a>
            <a><i class="fa fa-expand"></i></a>
@@ -92,6 +93,7 @@
         </div>
     </div>
   </div>
+        </div>
 </div>
     {% comment %}
     <script type="text/javascript">
