--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -47,12 +47,13 @@
                 <li id="agregar-amigo"> <a class="blue-text text-darken-1"><i class="material-icons">add</i></a></li>
                 <li><a href="{% url 'account_logout' %}" class="blue-text text-darken-1"><i class="material-icons">exit_to_app</i></a></li>
           </ul>
-          <a data-activates="mobile-menu" id="notifications-menu" class="right waves-effect btn-flat"><i class="material-icons">notifications</i></a>
+          <a data-activates="notification-menu" class="right button-right-notify btn-flat"><i class="material-icons">notifications</i><span id="live_notify_badge" class="">0</span></a>
       </div>
     </nav>
     {% include "account/menu-vertical.html" %}
     {% include "account/notification-right-menu.html" %}
   </div>
+  <li id="loader"></li>
     <script src="{{STATIC_URL}}js/jquery-3.1.0.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery-ui.min.js" type="text/javascript"></script>
