--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -5,14 +5,17 @@
 <script src="{{STATIC_URL}}js/notify.js" type="text/javascript"></script>
 {% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' menu_id='list-notify' %}
 <!-- MENU VERTICAL CON NOTIFICACIONES  -->
-<div id="notification-menu" class="col l3 m8 s12 nav-vertical-and-chat">
+{% comment %}
+ {% endcomment %}
+<ul id="notification-menu" class="side-nav nav-vertical-and-chat">
     <ul id="list-notify" class="list-notifications">
     {% live_notify_list %}
     </ul>
-    <div class="col l12 m12 s12 nav-vertical-controls">
+    <li><div class="divider"></div></li>
+        <div class="col l12 m12 s12 nav-vertical-controls">
         <div class="controls-notifications">
             <a id="clear-notify" class="nav-button-notifications">Limpiar</a>
             <a href="/inbox/notifications/" class="nav-button-notifications">Todas</a>
       </div>
       </div>
-</div>
+</ul>
